Add navigation links

--- a/orange.html
+++ b/orange.html
@@ -10,4 +10,6 @@
   <span style="color: #F90">fruit</span> named after it.</p>
 </body>
 </html>
+<p><a href="index.html">Return to home page</a></p>
+
 
